--- a/Warehouse/res/dashboard.css
+++ b/Warehouse/res/dashboard.css
@@ -17,6 +17,7 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
+  font-size: 18px;
   z-index: 100; /* Behind the navbar */
   padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
@@ -40,16 +41,16 @@ body {
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  color: #007DB8;
 }
 
 .sidebar .nav-link .feather {
   margin-right: 4px;
-  color: #999;
+  color: #007DB8;
 }
 
 .sidebar .nav-link.active {
-  color: #007bff;
+  color: black;
 }
 
 .sidebar .nav-link:hover .feather,
@@ -74,11 +75,16 @@ body {
  * Navbar
  */
 
+ .navbar{
+   background-color: #007DB8;
+   font-size: 18px;
+ }
+
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
   font-size: 1rem;
-  background-color: rgba(0, 0, 0, .25);
+  background-color: #007DB8;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
